pages: fix button text wrap on mobile browser

--- a/src/components/SlideNews/styles.module.css
+++ b/src/components/SlideNews/styles.module.css
@@ -120,10 +120,10 @@
     top: 10px;
   }
 
-  .primaryButton,
+ /* .primaryButton,
   .secondaryButton {
     width: 8rem;
-  }
+  } */
 }
 
 .spanStyle {
